--- a/Resources/Interface/FKSerialMonitorWindowController.xib
+++ b/Resources/Interface/FKSerialMonitorWindowController.xib
@@ -281,7 +281,7 @@
 											<string key="NSFrame">{{0, 5}, {400, 14}}</string>
 											<reference key="NSSuperview" ref="778777441"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="1037964087"/>
+											<reference key="NSNextKeyView" ref="627310370"/>
 											<string key="NSReuseIdentifierKey">_NS:1480</string>
 											<object class="NSTextContainer" key="NSTextContainer" id="692419398">
 												<object class="NSLayoutManager" key="NSLayoutManager">
@@ -302,7 +302,7 @@
 												<int key="NSTCFlags">1</int>
 											</object>
 											<object class="NSTextViewSharedData" key="NSSharedData">
-												<int key="NSFlags">10497</int>
+												<int key="NSFlags">67111169</int>
 												<int key="NSTextCheckingTypes">0</int>
 												<nil key="NSMarkedAttributes"/>
 												<reference key="NSBackgroundColor" ref="83068115"/>
@@ -336,8 +336,14 @@
 													<integer value="1" key="NSUnderline"/>
 												</dictionary>
 												<nil key="NSDefaultParagraphStyle"/>
-												<nil key="NSTextFinder"/>
-												<int key="NSPreferredTextFinderStyle">1</int>
+												<object class="NSTextFinder" key="NSTextFinder">
+													<reference key="NSTextFinderClient" ref="158926116"/>
+													<reference key="NSFindBarContainer" ref="899887700"/>
+													<int key="NSTextFinderStyle">2</int>
+													<bool key="NSIncrementalSearchingEnabled">NO</bool>
+													<bool key="NSIncrementalSearchingShouldDimContentView">YES</bool>
+												</object>
+												<int key="NSPreferredTextFinderStyle">2</int>
 											</object>
 											<int key="NSTVFlags">6</int>
 											<string key="NSMaxSize">{797, 10000000}</string>
@@ -384,7 +390,6 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 									<string key="NSFrame">{{386, 1}, {15, 280}}</string>
 									<reference key="NSSuperview" ref="899887700"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView"/>
 									<string key="NSReuseIdentifierKey">_NS:1494</string>
 									<reference key="NSTarget" ref="899887700"/>
 									<string key="NSAction">_doScroller:</string>
@@ -409,7 +414,7 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 							<string key="NSFrame">{{-1, -1}, {402, 282}}</string>
 							<reference key="NSSuperview" ref="1006"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="627310370"/>
+							<reference key="NSNextKeyView" ref="778777441"/>
 							<string key="NSReuseIdentifierKey">_NS:940</string>
 							<int key="NSsFlags">133138</int>
 							<reference key="NSVScroller" ref="1037964087"/>
