--- a/Resources/Interface/FKSketchDocument.xib
+++ b/Resources/Interface/FKSketchDocument.xib
@@ -478,14 +478,13 @@
 			<object class="NSWindowTemplate" id="947861986">
 				<int key="NSWindowStyleMask">1</int>
 				<int key="NSWindowBacking">2</int>
-				<string key="NSWindowRect">{{196, 240}, {320, 137}}</string>
+				<string key="NSWindowRect">{{196, 240}, {320, 180}}</string>
 				<int key="NSWTFlags">1685586944</int>
 				<string key="NSWindowTitle">Build Successful</string>
 				<string key="NSWindowClass">NSWindow</string>
 				<nil key="NSViewClass"/>
 				<nil key="NSUserInterfaceItemIdentifier"/>
-				<string key="NSWindowContentMaxSize">{320, 137}</string>
-				<string key="NSWindowContentMinSize">{320, 137}</string>
+				<string key="NSWindowContentMinSize">{320, 180}</string>
 				<object class="NSView" key="NSWindowView" id="747620173">
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
@@ -525,10 +524,10 @@
 								<string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
 								<string>NeXT TIFF v4.0 pasteboard type</string>
 							</set>
-							<string key="NSFrame">{{136, 42}, {48, 48}}</string>
+							<string key="NSFrame">{{136, 112}, {48, 48}}</string>
 							<reference key="NSSuperview" ref="747620173"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="591443892"/>
+							<reference key="NSNextKeyView" ref="32759834"/>
 							<string key="NSReuseIdentifierKey">_NS:2141</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSImageCell" key="NSCell" id="866950540">
@@ -548,11 +547,11 @@
 						</object>
 						<object class="NSTextField" id="32759834">
 							<reference key="NSNextResponder" ref="747620173"/>
-							<int key="NSvFlags">264</int>
-							<string key="NSFrame">{{124, 98}, {73, 19}}</string>
+							<int key="NSvFlags">269</int>
+							<string key="NSFrame">{{121, 85}, {73, 19}}</string>
 							<reference key="NSSuperview" ref="747620173"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="119905328"/>
+							<reference key="NSNextKeyView" ref="110421751"/>
 							<string key="NSReuseIdentifierKey">_NS:3944</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="795692692">
@@ -570,16 +569,48 @@
 								<reference key="NSTextColor" ref="401718131"/>
 							</object>
 						</object>
+						<object class="NSProgressIndicator" id="187629045">
+							<reference key="NSNextResponder" ref="747620173"/>
+							<int key="NSvFlags">1314</int>
+							<object class="NSPSMatrix" key="NSDrawMatrix"/>
+							<string key="NSFrame">{{97, 56}, {205, 20}}</string>
+							<reference key="NSSuperview" ref="747620173"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="591443892"/>
+							<string key="NSReuseIdentifierKey">_NS:2352</string>
+							<int key="NSpiFlags">16392</int>
+							<double key="NSMaxValue">1</double>
+						</object>
+						<object class="NSTextField" id="110421751">
+							<reference key="NSNextResponder" ref="747620173"/>
+							<int key="NSvFlags">292</int>
+							<string key="NSFrame">{{17, 60}, {77, 17}}</string>
+							<reference key="NSSuperview" ref="747620173"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="187629045"/>
+							<string key="NSReuseIdentifierKey">_NS:3944</string>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSTextFieldCell" key="NSCell" id="66869726">
+								<int key="NSCellFlags">68288064</int>
+								<int key="NSCellFlags2">272630784</int>
+								<string key="NSContents">Binary Size:</string>
+								<reference key="NSSupport" ref="198479777"/>
+								<string key="NSCellIdentifier">_NS:3944</string>
+								<reference key="NSControlView" ref="110421751"/>
+								<reference key="NSBackgroundColor" ref="123568926"/>
+								<reference key="NSTextColor" ref="401718131"/>
+							</object>
+						</object>
 					</array>
-					<string key="NSFrameSize">{320, 137}</string>
+					<string key="NSFrameSize">{320, 180}</string>
 					<reference key="NSSuperview"/>
 					<reference key="NSWindow"/>
-					<reference key="NSNextKeyView" ref="32759834"/>
+					<reference key="NSNextKeyView" ref="119905328"/>
 					<string key="NSReuseIdentifierKey">_NS:224</string>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
-				<string key="NSMinSize">{320, 159}</string>
-				<string key="NSMaxSize">{320, 159}</string>
+				<string key="NSMinSize">{320, 202}</string>
+				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
 			<object class="NSWindowTemplate" id="82270294">
@@ -663,7 +694,7 @@
 										<object class="NSTextView" id="68594908">
 											<reference key="NSNextResponder" ref="370280695"/>
 											<int key="NSvFlags">2322</int>
-											<string key="NSFrameSize">{336, 28}</string>
+											<string key="NSFrame">{{0, 14}, {336, 14}}</string>
 											<reference key="NSSuperview" ref="370280695"/>
 											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="1070924095"/>
@@ -687,7 +718,7 @@
 												<int key="NSTCFlags">1</int>
 											</object>
 											<object class="NSTextViewSharedData" key="NSSharedData">
-												<int key="NSFlags">2817</int>
+												<int key="NSFlags">67111681</int>
 												<int key="NSTextCheckingTypes">0</int>
 												<nil key="NSMarkedAttributes"/>
 												<reference key="NSBackgroundColor" ref="829542027"/>
@@ -998,6 +1029,14 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 						<reference key="destination" ref="591443892"/>
 					</object>
 					<int key="connectionID">100182</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">buildSuccessProgressIndicator</string>
+						<reference key="source" ref="512844837"/>
+						<reference key="destination" ref="187629045"/>
+					</object>
+					<int key="connectionID">100192</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -1318,8 +1357,10 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 						<reference key="object" ref="747620173"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="119905328"/>
-							<reference ref="591443892"/>
 							<reference ref="32759834"/>
+							<reference ref="110421751"/>
+							<reference ref="187629045"/>
+							<reference ref="591443892"/>
 						</array>
 						<reference key="parent" ref="947861986"/>
 					</object>
@@ -1374,6 +1415,24 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 						<int key="objectID">100184</int>
 						<reference key="object" ref="812591915"/>
 						<reference key="parent" ref="977050952"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">100187</int>
+						<reference key="object" ref="187629045"/>
+						<reference key="parent" ref="747620173"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">100190</int>
+						<reference key="object" ref="110421751"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="66869726"/>
+						</array>
+						<reference key="parent" ref="747620173"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">100191</int>
+						<reference key="object" ref="66869726"/>
+						<reference key="parent" ref="110421751"/>
 					</object>
 				</array>
 			</object>
@@ -1434,6 +1493,9 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 				<string key="100164.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="100183.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="100184.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="100187.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="100190.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="100191.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<boolean value="YES" key="5.IBNSWindowAutoPositionCentersHorizontal"/>
 				<boolean value="YES" key="5.IBNSWindowAutoPositionCentersVertical"/>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1444,7 +1506,7 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">100184</int>
+			<int key="maxID">100192</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1498,6 +1560,7 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 						<string key="buildButton">NSToolbarItem</string>
 						<string key="buildFailedSheet">NSWindow</string>
 						<string key="buildFailedTextView">NSTextView</string>
+						<string key="buildSuccessProgressIndicator">NSProgressIndicator</string>
 						<string key="buildSuccessSheet">NSWindow</string>
 						<string key="progressIndicator">NSProgressIndicator</string>
 						<string key="tabBarControl">PSMTabBarControl</string>
@@ -1531,6 +1594,10 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 						<object class="IBToOneOutletInfo" key="buildFailedTextView">
 							<string key="name">buildFailedTextView</string>
 							<string key="candidateClassName">NSTextView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="buildSuccessProgressIndicator">
+							<string key="name">buildSuccessProgressIndicator</string>
+							<string key="candidateClassName">NSProgressIndicator</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="buildSuccessSheet">
 							<string key="name">buildSuccessSheet</string>
