--- a/Resources/Interface/FKSketchDocument.xib
+++ b/Resources/Interface/FKSketchDocument.xib
@@ -328,7 +328,7 @@
 					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="498320532"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
 				<string key="NSMinSize">{240, 389}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<string key="NSFrameAutosaveName">FKSketchDocumentWindow</string>
@@ -470,7 +470,7 @@
 					<reference key="NSNextKeyView" ref="996408518"/>
 					<string key="NSReuseIdentifierKey">_NS:224</string>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
 				<string key="NSMinSize">{320, 164}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
@@ -576,7 +576,7 @@
 							<string key="NSFrame">{{97, 56}, {205, 20}}</string>
 							<reference key="NSSuperview" ref="747620173"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="591443892"/>
+							<reference key="NSNextKeyView" ref="309035063"/>
 							<string key="NSReuseIdentifierKey">_NS:2352</string>
 							<int key="NSpiFlags">16392</int>
 							<double key="NSMaxValue">100</double>
@@ -601,6 +601,30 @@
 								<reference key="NSTextColor" ref="401718131"/>
 							</object>
 						</object>
+						<object class="NSTextField" id="309035063">
+							<reference key="NSNextResponder" ref="747620173"/>
+							<int key="NSvFlags">268</int>
+							<string key="NSFrame">{{96, 35}, {139, 17}}</string>
+							<reference key="NSSuperview" ref="747620173"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="591443892"/>
+							<string key="NSReuseIdentifierKey">_NS:3944</string>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSTextFieldCell" key="NSCell" id="358192818">
+								<int key="NSCellFlags">67239488</int>
+								<int key="NSCellFlags2">4200704</int>
+								<string key="NSContents">1.2 kB of 32.0 kB</string>
+								<object class="NSFont" key="NSSupport">
+									<string key="NSName">LucidaGrande</string>
+									<double key="NSSize">9</double>
+									<int key="NSfFlags">3614</int>
+								</object>
+								<string key="NSCellIdentifier">_NS:3944</string>
+								<reference key="NSControlView" ref="309035063"/>
+								<reference key="NSBackgroundColor" ref="123568926"/>
+								<reference key="NSTextColor" ref="401718131"/>
+							</object>
+						</object>
 					</array>
 					<string key="NSFrameSize">{320, 180}</string>
 					<reference key="NSSuperview"/>
@@ -608,7 +632,7 @@
 					<reference key="NSNextKeyView" ref="119905328"/>
 					<string key="NSReuseIdentifierKey">_NS:224</string>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
 				<string key="NSMinSize">{320, 202}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
@@ -859,7 +883,7 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 					<reference key="NSNextKeyView" ref="371933549"/>
 					<string key="NSReuseIdentifierKey">_NS:224</string>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
 				<string key="NSMinSize">{380, 282}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
@@ -1037,6 +1061,14 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 						<reference key="destination" ref="187629045"/>
 					</object>
 					<int key="connectionID">100192</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">buildSuccessTextField</string>
+						<reference key="source" ref="512844837"/>
+						<reference key="destination" ref="309035063"/>
+					</object>
+					<int key="connectionID">100195</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -1361,6 +1393,7 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 							<reference ref="110421751"/>
 							<reference ref="187629045"/>
 							<reference ref="591443892"/>
+							<reference ref="309035063"/>
 						</array>
 						<reference key="parent" ref="947861986"/>
 					</object>
@@ -1434,6 +1467,19 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 						<reference key="object" ref="66869726"/>
 						<reference key="parent" ref="110421751"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">100193</int>
+						<reference key="object" ref="309035063"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="358192818"/>
+						</array>
+						<reference key="parent" ref="747620173"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">100194</int>
+						<reference key="object" ref="358192818"/>
+						<reference key="parent" ref="309035063"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -1496,6 +1542,8 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 				<string key="100187.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="100190.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="100191.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="100193.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="100194.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<boolean value="YES" key="5.IBNSWindowAutoPositionCentersHorizontal"/>
 				<boolean value="YES" key="5.IBNSWindowAutoPositionCentersVertical"/>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1506,7 +1554,7 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">100192</int>
+			<int key="maxID">100195</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1562,6 +1610,7 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 						<string key="buildFailedTextView">NSTextView</string>
 						<string key="buildSuccessProgressIndicator">NSProgressIndicator</string>
 						<string key="buildSuccessSheet">NSWindow</string>
+						<string key="buildSuccessTextField">NSTextField</string>
 						<string key="progressIndicator">NSProgressIndicator</string>
 						<string key="tabBarControl">PSMTabBarControl</string>
 						<string key="tabView">NSTabView</string>
@@ -1602,6 +1651,10 @@ AAEAAQAAAT0AAwAAAAEAAgAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
 						<object class="IBToOneOutletInfo" key="buildSuccessSheet">
 							<string key="name">buildSuccessSheet</string>
 							<string key="candidateClassName">NSWindow</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="buildSuccessTextField">
+							<string key="name">buildSuccessTextField</string>
+							<string key="candidateClassName">NSTextField</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="progressIndicator">
 							<string key="name">progressIndicator</string>
