Changed unsafe_unretained references to weak ones and fixed a bug with the preferences.

--- a/Resources/Interface/FKUpdatePreferencesViewController.xib
+++ b/Resources/Interface/FKUpdatePreferencesViewController.xib
@@ -160,6 +160,7 @@
 						<string key="NSFrame">{{191, 12}, {169, 32}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:687</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="999315495">
@@ -204,7 +205,7 @@
 						<reference key="source" ref="934841505"/>
 						<reference key="destination" ref="458109751"/>
 					</object>
-					<int key="connectionID">33</int>
+					<int key="connectionID">39</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
@@ -386,7 +387,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">38</int>
+			<int key="maxID">39</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
